src/objects/IEC_ZuoraPricing2SAP_Tracking__c.object
<CustomObject>
    <description>Track Zuora prices sent to SAP</description>
    <fields>
        <fullName>AmountOrPercentage__c</fullName>
        <description>Amount or percentage of price or discount</description>
        <label>Amount Or Percentage</label>
        <precision>18</precision>
        <required>true</required>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country for discount</description>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coupon__c</fullName>
        <description>Coupon code for discount</description>
        <label>Coupon</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <description>Currency for pricing</description>
        <label>Currency</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerType__c</fullName>
        <description>Type of customer for pricing</description>
        <label>Customer Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EffectiveFrom__c</fullName>
        <description>Effective start date of pricing</description>
        <label>Effective From</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EffectiveTo__c</fullName>
        <description>Effective end date of pricing</description>
        <label>Effective To</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EndingUnit__c</fullName>
        <description>Ending unit of range</description>
        <label>Ending Unit</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsFreeShipping__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is free shipping discount</description>
        <label>Is Free Shipping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPreSale__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is pre-sales discount</description>
        <label>Is Pre Sale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRecurring__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Pricing is recurring</description>
        <label>Is Recurring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Key</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LatestSourceTimestamp__c</fullName>
        <description>Latest LastModifiedDate of zqu__ProductRatePlan__c, zqu__ProductRatePlanCharge__c and zqu__ProductRatePlanChargeTier__c to determine if pricing is changed</description>
        <label>Latest Source Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Material_Number__c</fullName>
        <description>SAP material number</description>
        <label>Material Number</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <description>Operation to do on pricing in SAP: I for insert, U for update, D for delete</description>
        <label>Operation</label>
        <length>1</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Type__c</fullName>
        <description>Type of pricing for interface</description>
        <label>Pricing Type</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region for discount</description>
        <label>Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SendingTimestamp__c</fullName>
        <description>Timestamp of sending to SAP.  Empty means pricing is to send</description>
        <label>Sending Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartingUnit__c</fullName>
        <description>Starting unit of range</description>
        <label>Starting Unit</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <label>ZuoraPricing2SAP Price</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Operation__c</columns>
        <columns>Material_Number__c</columns>
        <columns>Pricing_Type__c</columns>
        <columns>CustomerType__c</columns>
        <columns>StartingUnit__c</columns>
        <columns>EndingUnit__c</columns>
        <columns>AmountOrPercentage__c</columns>
        <columns>Key__c</columns>
        <columns>LatestSourceTimestamp__c</columns>
        <columns>SendingTimestamp__c</columns>
        <columns>EffectiveFrom__c</columns>
        <columns>EffectiveTo__c</columns>
        <columns>Currency__c</columns>
        <columns>Coupon__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>T-{000000}</displayFormat>
        <label>IEC ZuoraPricing2SAP Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ZuoraPricing2SAP Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>